Video player enters a bad state after trying to enter picture-in-picture on YouTube.com videos https://bugs.webkit.org/show_bug.cgi?id=226042

Reviewed by Daniel Bates.

The quirk `shouldDisableEndFullscreenEventWhenEnteringPictureInPictureFromFull` was
always true. This patch fixes that.

* page/Quirks.cpp:
(WebCore::Quirks::shouldDisableEndFullscreenEventWhenEnteringPictureInPictureFromFullscreenQuirk const):


Canonical link: https://commits.webkit.org/238023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277886 268f45cc-cd09-0410-ab3c-d52691b4dbfc